@@ -98,6 +98,7 @@ xt/expr-impl.h
 xt/expr.c
 xt/expr.h
 xt/llr.pl
+xt/psp.pl
 examples/bench-mp-psrp.pl
 examples/verify-cert.pl
 examples/convert-primo-cert.pl
